navigation visibility fixed

--- a/cooleymusic/public/css/styles.css
+++ b/cooleymusic/public/css/styles.css
@@ -181,3 +181,7 @@ p {
 .headerImage {
     text-align: center;
 }
+
+/*.navbar-toggle {
+    float: left;
+}*/
